# nix-python-template

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
src/example/: __init__.py  main.py
tests/: test_example.py
